--- a/package.json
+++ b/package.json
@@ -12,38 +12,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.0-beta.2",
-    "@angular/common": "^5.1.0-beta.2",
-    "@angular/compiler": "^5.1.0-beta.2",
-    "@angular/compiler-cli": "^5.1.0-beta.2",
-    "@angular/core": "^5.1.0-beta.2",
-    "@angular/forms": "^5.1.0-beta.2",
-    "@angular/http": "^5.1.0-beta.2",
-    "@angular/platform-browser": "^5.1.0-beta.2",
-    "@angular/platform-browser-dynamic": "^5.1.0-beta.2",
-    "@angular/platform-server": "^5.1.0-beta.2",
-    "@angular/router": "^5.1.0-beta.2",
+    "@angular/common": "^4.2.5",
+    "@angular/compiler": "^4.2.5",
+    "@angular/core": "^4.2.5",
+    "@angular/forms": "^4.2.5",
+    "@angular/http": "^4.2.5",
+    "@angular/platform-browser": "^4.2.5",
+    "@angular/platform-browser-dynamic": "^4.2.5",
+    "@angular/router": "^4.2.5",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.7.6"
+    "ngx-bootstrap": "^2.0.0-beta.9",
+    "rxjs": "^5.4.1",
+    "xml-to-json-promise": "0.0.3",
+    "xml2json": "^0.11.0",
+    "zone.js": "^0.8.12"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-rc.1",
-    "@angular/compiler-cli": "^2.4.0",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
+    "@angular/cli": "^1.2.0",
+    "@angular/compiler-cli": "^4.2.5",
+    "@types/jasmine": "^2.5.53",
+    "@types/node": "~6.0.79",
+    "codelyzer": "^3.1.1",
+    "jasmine-core": "^2.6.4",
+    "jasmine-spec-reporter": "^4.1.1",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "protractor": "~5.1.0",
-    "ts-node": "~2.0.0",
-    "tslint": "~4.4.2",
-    "typescript": "~2.0.0"
+    "protractor": "~5.1.2",
+    "ts-node": "^3.1.0",
+    "tslint": "^5.4.3",
+    "typescript": "^2.4.1"
   }
 }
